8.11
Trying to keep Java 8 compatibility https://github.com/tonikelope/megabasterd/issues/600